Mengubah tampilan halaman Detail Pembelian dan melengkapi detail yang tadi masih kurang

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/obat/Paracetamol.png
     - assets/obat/Amoxicillin.png
     - assets/obat/Betadine.png
+    - assets/obat/Oralit.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
