--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/obat/Amoxicillin.png
     - assets/obat/Betadine.png
     - assets/obat/Oralit.png
+    - assets/obat/Kosong.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
